change to index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class=logo>
             <img src="images/logo1.jpg" alt="logo" style="width:70px;">
             </a></div>
-        <a href="weblapa.html">Akvārija kopšana</a>
+        <a href="index.html">Akvārija kopšana</a>
         <a href="zivis.html">Zivis</a>
         <a href="augi.html">Augi</a>
         <a href="links.html">Noderīgas saites</a>
